# lab_device

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  device.cpp
.github/workflows/: ci.yml
docs/: index.html
docs/html/: annotated.html  annotated_dup.js  class_device-members.html  class_device.html  class_device.js  class_mixer-members.html  class_mixer.html  class_mixer.js  class_reactor-members.html  class_reactor.html  class_reactor.js  class_stream-members.html  class_stream.html  class_stream.js  classes.html  doxygen_crawl.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  hierarchy.js  index.html  navtreedata.js  navtreeindex0.js
docs/html/search/: all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  classes_1.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  searchdata.js
tests/: device_test.cpp
